api client integration